fix cropped text issue

--- a/src/scss/custom/botchat.scss
+++ b/src/scss/custom/botchat.scss
@@ -122,6 +122,8 @@ body {
     padding-bottom: 10px;
     outline: none;
     white-space: normal !important;
+    overflow: visible !important;
+    text-overflow: inherit !important;
     // font-size: 18px;
 
     &:active {
